--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4438,5 +4438,84 @@
     "CL_DV_OV_night_mode_setting_desc": "Μειώστε τη φωτεινότητα της οθόνης και/ή του φωτισμού κατά τις προγραμματισμένες ώρες νυκτός.",
     "CL_DV_OV_door_lock_setting_desc": "Η ενεργοποίηση της κλειδαριάς της πόρτας θα κλειδώσει την πόρτα του φούρνου σας.",
     "CL_CF_FM_one_day_left": "1 ημέρα έμεινε",
-    "CL_CF_FM_x_item_selected": "*** επιλεγμένο στοιχείο"
+    "CL_CF_FM_x_item_selected": "*** επιλεγμένο στοιχείο",
+    "CL_SL_CM_progam_send_warning": "Λυπούμαστε, το πρόγραμμα δεν μπορεί να στείλει, ενεργοποιήστε τη συσκευή σας και ανοίξτε το τηλεχειριστήριο και δοκιμάστε ξανά.",
+    "CL_SL_CM_progam_start_warning": "Λυπούμαστε, το πρόγραμμα δεν μπορεί να ξεκινήσει, ενεργοποιήστε τη συσκευή σας και ανοίξτε το τηλεχειριστήριο και δοκιμάστε ξανά.",
+    "CL_SL_CM_progam_sent_successfully": "Το πρόγραμμα στάλθηκε με επιτυχία!",
+    "CL_SL_CM_select_device_desc": "Επιλέξτε τη συσκευή που θα χρησιμοποιηθεί.",
+    "CL_DV_WM_Detergent_In_Use_key": "Απορρυπαντικό σε χρήση",
+    "CL_DV_RF_cleaning_mode": "Λειτουργία καθαρισμού",
+    "CL_DV_RF_holiday_mode": "Λειτουργία διακοπών",
+    "CL_DV_RF_party_mode": "Λειτουργία πάρτι",
+    "w_i_connect_scenario": "Τι είναι το σενάριο ConnectLife",
+    "w_i_smart_energy": "Τι είναι η Έξυπνη Ενέργεια",
+    "smart_energy_l_m": "Μάθετε περισσότερα σχετικά με τα βασικά χαρακτηριστικά της Smart Energy",
+    "w_i_air_care": "Τι είναι το Air Care",
+    "air_care_l_m": "Μάθετε περισσότερα για τα βασικά χαρακτηριστικά του Air Care",
+    "w_i_smart_laundry": "Τι είναι το Smart Laundry",
+    "smart_laundry_l_m": "Μάθετε περισσότερα σχετικά με τα βασικά χαρακτηριστικά του Smart Laundry",
+    "w_i_smart_kitchen": "Τι είναι η Έξυπνη Κουζίνα",
+    "smart_kitchen_l_m": "Μάθετε περισσότερα για τα βασικά χαρακτηριστικά του Smart Kitchen",
+    "w_i_smart_support": "Τι είναι η Έξυπνη Υποστήριξη",
+    "smart_support_l_m": "Μάθετε περισσότερα σχετικά με τις βασικές δυνατότητες της Έξυπνης Υποστήριξης",
+    "smart_energy_helps": "Το Smart Energy σάς βοηθά να παρακολουθείτε και να διατηρείτε τις συσκευές σε ενεργειακά αποδοτική κατάσταση",
+    "smart_energy_helps_1": "1.Eco με ένα κλικ",
+    "smart_energy_helps_1_content": "Ενεργή λειτουργία ECO των συσκευών σας. Αναλύστε στατιστικά την κατανάλωση ενέργειας της συσκευής. Παρακολούθηση δεδομένων εξοικονόμησης ενέργειας και Ορισμός στόχου χρήσης ενέργειας.",
+    "smart_energy_helps_2": "2.Παρακολούθηση Κατανάλωσης Ενέργειας",
+    "smart_energy_helps_2_content": "Υπολογίστε την κατανάλωση ενέργειας και νερού ολόκληρου του σπιτιού σε ημερήσια, μηνιαία και ετήσια βάση. μπορείτε επίσης να δείτε τα στατιστικά στοιχεία κατανάλωσης μεμονωμένων συσκευών, το ποσοστό κατανάλωσης ενέργειας κάθε συσκευής εντός της επιλεγμένης περιόδου, τη συνολική και μεμονωμένη κατανάλωση ενέργειας.",
+    "smart_energy_helps_3": "3.Ενεργειακός Βοηθός",
+    "smart_energy_helps_3_content": "Θέστε στόχους εξοικονόμησης ενέργειας και στείλτε ειδοποιήσεις στους χρήστες όταν επιτευχθούν οι καθορισμένες τιμές-στόχοι.",
+    "air_care_helps": "Η φροντίδα αέρα στοχεύει να λύσει τον έξυπνο έλεγχο της θερμοκρασίας, της υγρασίας και του αέρα σε ολόκληρο το σπίτι",
+    "air_care_helps_1": "1.Αξιολόγηση αέρα",
+    "air_care_helps_1_content": "Παρακολουθήστε την κατάσταση θερμοκρασίας και υγρασίας κάθε δωματίου σε πραγματικό χρόνο και παρέχετε αξιολογήσεις άνεσης και υπενθυμίσεις βάσει του κλιματισμού",
+    "air_care_helps_2": "2. Βελτιστοποίηση με ένα κλικ",
+    "air_care_helps_2_content": "Η βελτιστοποίηση μπορεί να ξεκινήσει με ένα κλικ. Παρέχουμε πέντε διαφορετικά σχήματα βελτιστοποίησης. Κάθε λειτουργία βελτιστοποίησης μπορεί να προσαρμοστεί ανάλογα με τις ανάγκες του χρήστη, παρέχοντας στους χρήστες εξατομικευμένες λύσεις βελτιστοποίησης.",
+    "air_care_helps_3": "3.3D θέα στο δωμάτιο",
+    "air_care_helps_3_content": "Παρακολουθήστε την κατάσταση και τις συσκευές του δωματίου σας μέσω μιας λεπτομερούς τρισδιάστατης απεικόνισης του σπιτιού σας.",
+    "smart_laundry_key": "Έξυπνο πλυντήριο",
+    "smart_laundry_helps": "Το Smart Laundry προσφέρει εξειδικευμένες συμβουλές πλυσίματος, έξυπνο βοηθό πλυντηρίου και απρόσκοπτη διαχείριση απορρυπαντικού, εξασφαλίζοντας μια απαράμιλλη εμπειρία πλυσίματος ρούχων",
+    "smart_laundry_helps_1": "1.Προσαρμοσμένο πλυντήριο",
+    "smart_laundry_helps_1_content": "Εξατομικευμένοι κύκλοι με βάση τα προφίλ και τις προτιμήσεις των χρηστών, με ετικέτες για διαφορετικές εποχές, υπαίθριες δραστηριότητες, βρεφική φροντίδα και πολλά άλλα.",
+    "smart_laundry_helps_2": "2.Διαχείριση απορρυπαντικών",
+    "smart_laundry_helps_2_content": "Βελτιστοποιήστε τη ρουτίνα πλύσης σας με το Smart Home Laundry Assistant, αναγνωρίζετε αυτόματα τις μάρκες απορρυπαντικών και διαχειρίζεστε τη δόση στο πλυντήριό σας.",
+    "smart_laundry_helps_3": "3.Αναφορά χρήσης πλυντηρίου",
+    "smart_laundry_helps_3_content": "Εμφανίζει εβδομαδιαίες, μηνιαίες και ετήσιες αναφορές σχετικά με τη χρήση του προγράμματος πλύσης ρούχων από τον χρήστη, καθώς και τη χρήση νερού και ηλεκτρισμού του μήνα και τον καθαρισμό τυμπάνων.",
+    "smart_kitchen_key": "Έξυπνη Κουζίνα",
+    "smart_kitchen_helps": "Το Smart Kitchen σας προσφέρει μια άνευ προηγουμένου έξυπνη μαγειρική εμπειρία, συμπεριλαμβανομένων έξυπνων συνταγών, συνδυασμών κρασιών, βοηθών συνταγών και διαχείρισης συστατικών, κρασιού και ποτών",
+    "smart_kitchen_helps_1": "1.Συνταγή σεφ",
+    "smart_kitchen_helps_1_content": "Απολαύστε συνταγές master σε μοναδικές γεύσεις όταν μαγειρεύονται σε διαφορετικούς φούρνους, οι οποίες ακολουθούν τις οδηγίες μαγειρέματος της συνταγής με ένα μόνο κλικ.",
+    "smart_kitchen_helps_2": "2.Βοηθός Συνταγών",
+    "smart_kitchen_helps_2_content": "Προσαρμόστε και δημιουργήστε συνταγές με βάση τις προσωπικές σας προτιμήσεις, συμπεριλαμβανομένων της διατροφής, της κουζίνας, του τρόπου ζωής και των αλλεργιών.",
+    "smart_kitchen_helps_3": "3.Διαχείριση Τροφίμων",
+    "smart_kitchen_helps_3_content": "Προσθέστε και προβάλετε λεπτομέρειες συστατικών που χρησιμοποιούνται συχνά, όπως ημερομηνία λήξης. Ταιριάξτε γρήγορα κατάλληλες συνταγές τροφίμων και στείλτε τα συστατικά που λείπουν στη λίστα αγορών.",
+    "smart_kitchen_helps_4": "Διαχείριση ποτών",
+    "smart_kitchen_helps_4_content": "Προσθέστε ποτά και δημιουργήστε μια λίστα ποτών, δείτε λεπτομερείς πληροφορίες για κάθε αποθηκευμένο ποτό.",
+    "smart_kitchen_helps_5": "Απογραφή κρασιού",
+    "smart_kitchen_helps_5_content": "Σαρώστε για να δημιουργήσετε μια λίστα κάβας από το VIvino, ορίστε υπενθυμίσεις για τη βέλτιστη περίοδο κατανάλωσης και προτείνετε συνδυασμό φαγητού με βάση τον τύπο κρασιού.",
+    "smart_kitchen_helps_6": "6.Λίστα αγορών",
+    "smart_kitchen_helps_6_content": "Δημιουργήστε τη λίστα αγορών με βάση τη συνταγή, επισημάνετε τα είδη που έχετε ήδη και αποκτήσετε ως αναφορά αγορών.",
+    "smart_support_key": "Έξυπνη υποστήριξη",
+    "smart_support_helps": "Η Smart Support παρέχει ολοκληρωμένη βοήθεια για τις συσκευές σας. Μπορείτε να λάβετε συμβουλές καθαρισμού και φροντίδας για καθημερινή συντήρηση, αυτοδιάγνωση με ένα κλικ για να ελέγξετε την κατάσταση όλων των συσκευών σας και να παρέχετε πιθανές λύσεις για τυχόν μη φυσιολογικές λειτουργίες",
+    "smart_support_helps_1": "1. Συμβουλές καθαρισμού και συντήρησης",
+    "smart_support_helps_1_content": "Δώστε προτάσεις για καθημερινό καθαρισμό και συντήρηση του προϊόντος.",
+    "smart_support_helps_2": "2.Αυτοδιάγνωση με ένα κλικ",
+    "smart_support_helps_2_content": "Αυτοεπιθεώρηση με ένα κλικ για να κατανοήσετε την κατάσταση όλων των οικιακών συσκευών. Όταν εντοπιστεί πρόβλημα, δώστε προτεινόμενες λύσεις.",
+    "smart_support_helps_3": "Αντιμετώπιση προβλημάτων",
+    "smart_support_helps_3_content": "Όταν η συσκευή έχει πρόβλημα, οι χρήστες μπορούν να αυτοβοηθήσουν, να αντιμετωπίσουν και να λύσουν το πρόβλημα σύμφωνα με τον οδηγό σφαλμάτων.",
+    "smart_support_helps_4": "4. Αναφορά θέματος",
+    "smart_support_helps_4_content": "Εάν υπάρχουν προβλήματα με τη χρήση της εφαρμογής ή του προϊόντος, οι χρήστες μπορούν να σχολιάσουν online για να μειώσουν τον χρόνο επικοινωνίας με το τηλεφωνικό κέντρο.",
+    "smart_support_helps_5": "5.Επικοινωνήστε μαζί μας",
+    "smart_support_helps_5_content": "Οι χρήστες μπορούν να επικοινωνήσουν μαζί μας μέσω τηλεφώνου, email και επίσημης ιστοσελίδας.",
+    "block_key": "Φραγμός",
+    "guide_tips_device_1": "Αυτή είναι η <b> νέα καρτέλα αρχικής σελίδας. </b>",
+    "guide_tips_device_2": "Μπορείτε να κάνετε κλικ στο \" : \" για να επεξεργαστείτε, να εμφανίσετε ή να αποκρύψετε την παραγγελία.",
+    "guide_tips_device_3": "Μπορείτε να πατήσετε παρατεταμένα την κάρτα για να τη διαγράψετε ή να την επεξεργαστείτε.",
+    "guide_tips_device_4": "Μπορείτε να δοκιμάσετε <b> προσαρμοσμένες κάρτες σεναρίων. </b>",
+    "guide_tips_device_5": "Μπορείτε να βρείτε τη ρύθμιση της αρχικής καρτέλας στο <b> προσαρμογή εμφάνισης </b> στη σελίδα μενού",
+    "guide_tips_1": "Το ConnectLife κυκλοφόρησε <b> πέντε σενάρια. </b>",
+    "guide_tips_2": "Μπορείτε να κάνετε κλικ στο \":\" για να επεξεργαστείτε τη σειρά των ενοτήτων",
+    "guide_tips_3": "Μπορείτε να σύρετε το \"=\" για να αλλάξετε τη σειρά των ενοτήτων στην αρχική σελίδα.",
+    "c_your_device": "Συνδέστε\n τις συσκευές σας",
+    "a_ex_new_way": "και βιώστε έναν νέο τρόπο έξυπνης ζωής.",
+    "my_place": "Ο τόπος μου"
 }
