--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4438,5 +4438,84 @@
     "CL_DV_OV_night_mode_setting_desc": "Csökkentse a képernyő fényerejét és/vagy a világítást a tervezett éjszakai órákban.",
     "CL_DV_OV_door_lock_setting_desc": "Az ajtózár bekapcsolása bezárja a sütő ajtaját.",
     "CL_CF_FM_one_day_left": "1 nap van hátra",
-    "CL_CF_FM_x_item_selected": "*** elem kiválasztva"
+    "CL_CF_FM_x_item_selected": "*** elem kiválasztva",
+    "CL_SL_CM_progam_send_warning": "Sajnáljuk, a program nem tud küldeni. Kapcsolja be a készüléket, nyissa ki a távirányítót, és próbálja újra.",
+    "CL_SL_CM_progam_start_warning": "Sajnáljuk, a program nem indul el. Kapcsolja be a készüléket, nyissa meg a távirányítót, és próbálja újra.",
+    "CL_SL_CM_progam_sent_successfully": "A program sikeresen elküldve!",
+    "CL_SL_CM_select_device_desc": "Kérjük, válassza ki a használni kívánt eszközt.",
+    "CL_DV_WM_Detergent_In_Use_key": "Mosószer használatban",
+    "CL_DV_RF_cleaning_mode": "Tisztítási mód",
+    "CL_DV_RF_holiday_mode": "Nyaralás mód",
+    "CL_DV_RF_party_mode": "Party mód",
+    "w_i_connect_scenario": "Mi az a ConnectLife forgatókönyv",
+    "w_i_smart_energy": "Mi az intelligens energia",
+    "smart_energy_l_m": "Tudjon meg többet a Smart Energy legfontosabb funkcióiról",
+    "w_i_air_care": "Mi az a Air Care",
+    "air_care_l_m": "Tudjon meg többet az Air Care legfontosabb funkcióiról",
+    "w_i_smart_laundry": "Mi az a Smart Laundry",
+    "smart_laundry_l_m": "Tudjon meg többet a Smart Laundry legfontosabb funkcióiról",
+    "w_i_smart_kitchen": "Mi az a Smart Kitchen",
+    "smart_kitchen_l_m": "Tudjon meg többet a Smart Kitchen fő funkcióiról",
+    "w_i_smart_support": "Mi az intelligens támogatás",
+    "smart_support_l_m": "Tudjon meg többet a Smart Support főbb funkcióiról",
+    "smart_energy_helps": "A Smart Energy segít felügyelni és energiatakarékos állapotban tartani az eszközöket",
+    "smart_energy_helps_1": "1.Egykattintásos Eco",
+    "smart_energy_helps_1_content": "A készülékek aktív ECO üzemmódja. Statisztikailag elemezze az eszköz energiafogyasztását. Kövesse nyomon az energiatakarékossági adatokat, és állítsa be az energiahasználati célt.",
+    "smart_energy_helps_2": "2. Energiafogyasztás figyelése",
+    "smart_energy_helps_2_content": "Számítsa ki az egész ház áram- és vízfogyasztását napi, havi és éves alapon. megtekintheti az egyes készülékek fogyasztási statisztikáit, az egyes készülékek energiafogyasztásának arányát a kiválasztott időszakban, a teljes és egyedi energiafogyasztást.",
+    "smart_energy_helps_3": "3.Energia asszisztens",
+    "smart_energy_helps_3_content": "Állítson be energiatakarékossági célokat, és küldjön értesítést a felhasználóknak, ha elérte a beállított célértékeket.",
+    "air_care_helps": "Az Air Care célja a hőmérséklet, páratartalom és levegő intelligens szabályozásának megoldása az egész házban",
+    "air_care_helps_1": "1. Levegő értékelés",
+    "air_care_helps_1_content": "Valós időben nyomon követheti az egyes helyiségek hőmérsékletét és páratartalmát, valamint komfortértékeléseket és emlékeztetőket biztosíthat a légkondicionálás alapján",
+    "air_care_helps_2": "2.One-click Optimization",
+    "air_care_helps_2_content": "Az optimalizálás egy kattintással elindítható. Öt különböző optimalizálási sémát kínálunk. Az egyes optimalizálási módok a felhasználói igényeknek megfelelően állíthatók, így a felhasználók személyre szabott optimalizálási megoldásokat kínálnak.",
+    "air_care_helps_3": "3.3D szoba nézet",
+    "air_care_helps_3_content": "Tartsa szemmel szobája állapotát és berendezéseit otthona részletes 3D-s megjelenítésével.",
+    "smart_laundry_key": "Intelligens mosoda",
+    "smart_laundry_helps": "A Smart Laundry professzionális mosási tippeket, intuitív mosodai asszisztenst és zökkenőmentes mosószer-kezelést kínál, biztosítva a páratlan mosási élményt.",
+    "smart_laundry_helps_1": "1. Egyedi mosoda",
+    "smart_laundry_helps_1_content": "Személyre szabott ciklusok a felhasználói profilok és preferenciák alapján, különböző évszakokhoz, szabadtéri tevékenységekhez, babaápoláshoz stb.",
+    "smart_laundry_helps_2": "2. Mosószer-kezelés",
+    "smart_laundry_helps_2_content": "Optimalizálja mosási rutinját a Smart Home Laundry Assistant segítségével, automatikusan felismeri a mosószer márkákat, és szabályozza az adagolást a mosógépben.",
+    "smart_laundry_helps_3": "3. Mosodahasználati jelentés",
+    "smart_laundry_helps_3_content": "Heti, havi és éves jelentéseket jelenít meg a mosodai program felhasználó általi használatáról, valamint a havi víz- és áramhasználatról, valamint a dob tisztításáról.",
+    "smart_kitchen_key": "Okos konyha",
+    "smart_kitchen_helps": "A Smart Kitchen példátlan intelligens főzési élményt nyújt Önnek, beleértve az intelligens recepteket, borpárosításokat, receptsegédeket, valamint az összetevők, borok és italok kezelését.",
+    "smart_kitchen_helps_1": "1.Séf recept",
+    "smart_kitchen_helps_1_content": "Tapasztalja meg a mester receptjeit egyedi ízekben, ha különböző sütőben sütjük, amelyek egyetlen kattintással követik a recept főzési utasításait.",
+    "smart_kitchen_helps_2": "2. Receptasszisztens",
+    "smart_kitchen_helps_2_content": "Személyre szabott és generál recepteket személyes preferenciái alapján, beleértve a táplálkozást, konyhákat, életmódot és allergiákat.",
+    "smart_kitchen_helps_3": "3. Élelmiszer-gazdálkodás",
+    "smart_kitchen_helps_3_content": "Adja hozzá és tekintse meg a gyakran használt összetevők részleteit, például a lejárati dátumot. Gyorsan párosítsa a megfelelő ételrecepteket, és elküldje a hiányzó összetevőket a bevásárlólistára.",
+    "smart_kitchen_helps_4": "Monitor",
+    "smart_kitchen_helps_4_content": "Adjon hozzá italokat és hozzon létre egy itallistát, tekintse meg minden egyes tárolt ital részletes információit.",
+    "smart_kitchen_helps_5": "Borleltár",
+    "smart_kitchen_helps_5_content": "Vivino borospincelistájának szkennelésével állítson be emlékeztetőket az optimális ivási időszakra, és javasoljon ételpárosítást a bor típusa alapján.",
+    "smart_kitchen_helps_6": "6. Bevásárlólista",
+    "smart_kitchen_helps_6_content": "A recept alapján állítsa össze a bevásárlólistát, jelölje be vásárlási referenciaként a már birtokolt és megvásárolt termékeket.",
+    "smart_support_key": "Intelligens támogatás",
+    "smart_support_helps": "Az intelligens támogatás átfogó segítséget nyújt eszközei számára. Tisztítási és ápolási tippeket kaphat a napi karbantartáshoz, egy kattintásos öndiagnosztikát az összes eszköz állapotának ellenőrzéséhez, és lehetséges megoldásokat kínál a rendellenes műveletekre.",
+    "smart_support_helps_1": "1.Tisztítási és karbantartási tippek",
+    "smart_support_helps_1_content": "Adjon javaslatokat a termék napi tisztítására és karbantartására.",
+    "smart_support_helps_2": "2. Egykattintásos öndiagnosztika",
+    "smart_support_helps_2_content": "Egy kattintással végzett önellenőrzés az összes háztartási készülék állapotának megértéséhez. Ha problémát észlel, javasoljon megoldásokat.",
+    "smart_support_helps_3": "Hibaelhárítás",
+    "smart_support_helps_3_content": "Ha a készülék problémába ütközik, a felhasználók a hibaútmutató szerint önsegíthetnek, elháríthatják és megoldhatják a problémát.",
+    "smart_support_helps_4": "4. Probléma bejelentése",
+    "smart_support_helps_4_content": "Ha problémák merülnek fel az APP vagy a termék használatával kapcsolatban, a felhasználók online visszajelzést adhatnak, hogy csökkentsék a telefonközponttal való kommunikációs időt.",
+    "smart_support_helps_5": "5. Vegye fel velünk a kapcsolatot",
+    "smart_support_helps_5_content": "A felhasználók telefonon, e-mailben és a hivatalos webhelyen keresztül léphetnek kapcsolatba velünk.",
+    "block_key": "Tömb",
+    "guide_tips_device_1": "Ez az <b> új kezdőlap lap. </b>",
+    "guide_tips_device_2": "A rendelés szerkesztéséhez, megjelenítéséhez vagy elrejtéséhez kattintson a \" : \" gombra.",
+    "guide_tips_device_3": "A kártya hosszan megnyomásával törölheti vagy szerkesztheti.",
+    "guide_tips_device_4": "Megtapasztalhatja <b> testreszabott forgatókönyv-kártyákat. </b>",
+    "guide_tips_device_5": "A Kezdőlap lap beállítását a menüoldal <b> megjelenésének testreszabása </b> részben találja",
+    "guide_tips_1": "A ConnectLife <b> öt forgatókönyvet indított el. </b>",
+    "guide_tips_2": "A \":\" gombra kattintva módosíthatja a szakaszok sorrendjét",
+    "guide_tips_3": "A \"=\" húzásával módosíthatja a szakaszok sorrendjét a kezdőlapon.",
+    "c_your_device": "Csatlakoztassa\neszközeit",
+    "a_ex_new_way": "és tapasztalja meg az intelligens életvitel új módját.",
+    "my_place": "Az én helyem"
 }
