--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4438,5 +4438,84 @@
     "CL_DV_OV_night_mode_setting_desc": "Reduceți luminozitatea ecranului și/sau a luminii în timpul orelor programate de noapte.",
     "CL_DV_OV_door_lock_setting_desc": "Activarea blocării ușii va bloca ușa cuptorului dumneavoastră.",
     "CL_CF_FM_one_day_left": "1 zi ramasa",
-    "CL_CF_FM_x_item_selected": "*** articol selectat"
+    "CL_CF_FM_x_item_selected": "*** articol selectat",
+    "CL_SL_CM_progam_send_warning": "Ne pare rău, programul nu poate trimite, vă rugăm să porniți dispozitivul, deschideți telecomanda și încercați din nou.",
+    "CL_SL_CM_progam_start_warning": "Ne pare rău, programul nu poate porni, porniți dispozitivul și deschideți telecomanda și încercați din nou.",
+    "CL_SL_CM_progam_sent_successfully": "Program trimis cu succes!",
+    "CL_SL_CM_select_device_desc": "Vă rugăm să selectați dispozitivul de utilizat.",
+    "CL_DV_WM_Detergent_In_Use_key": "Detergent în uz",
+    "CL_DV_RF_cleaning_mode": "Modul de curățare",
+    "CL_DV_RF_holiday_mode": "Modul vacanță",
+    "CL_DV_RF_party_mode": "Modul petrecere",
+    "w_i_connect_scenario": "Ce este scenariul ConnectLife",
+    "w_i_smart_energy": "Ce este Smart Energy",
+    "smart_energy_l_m": "Aflați mai multe despre caracteristicile cheie ale Smart Energy",
+    "w_i_air_care": "Ce este Air Care",
+    "air_care_l_m": "Aflați mai multe despre caracteristicile cheie ale Air Care",
+    "w_i_smart_laundry": "Ce este Smart Laundry",
+    "smart_laundry_l_m": "Aflați mai multe despre caracteristicile cheie ale Smart Laundry",
+    "w_i_smart_kitchen": "Ce este Smart Kitchen",
+    "smart_kitchen_l_m": "Aflați mai multe despre caracteristicile cheie ale bucătăriei inteligente",
+    "w_i_smart_support": "Ce este Smart Support",
+    "smart_support_l_m": "Aflați mai multe despre caracteristicile cheie ale Smart Support",
+    "smart_energy_helps": "Smart Energy vă ajută să monitorizați și să mențineți dispozitivele în stare de eficiență energetică",
+    "smart_energy_helps_1": "1.One-Click Eco",
+    "smart_energy_helps_1_content": "Modul ECO activ al aparatelor dvs. Analizați statistic consumul de energie al dispozitivului. Monitorizați datele privind economisirea energiei și setați obiectivul de utilizare a energiei.",
+    "smart_energy_helps_2": "2. Monitorizarea consumului de energie",
+    "smart_energy_helps_2_content": "Calculați consumul de energie și apă pentru întreaga casă zilnic, lunar și anual. De asemenea, puteți vizualiza statisticile de consum ale dispozitivelor individuale, proporția consumului de energie al fiecărui dispozitiv în perioada selectată, consumul total și individual de energie.",
+    "smart_energy_helps_3": "3.Asistent energetic",
+    "smart_energy_helps_3_content": "Stabiliți obiective de economisire a energiei și trimiteți notificări utilizatorilor când sunt atinse valorile țintă stabilite.",
+    "air_care_helps": "Îngrijirea aerului își propune să rezolve controlul inteligent al temperaturii, umidității și aerului din întreaga casă",
+    "air_care_helps_1": "1.Evaluarea aerului",
+    "air_care_helps_1_content": "Monitorizați starea temperaturii și umidității fiecărei încăperi în timp real și oferiți evaluări de confort și mementouri bazate pe aerul condiționat",
+    "air_care_helps_2": "2.Optimizare cu un singur clic",
+    "air_care_helps_2_content": "Optimizarea poate fi începută cu un singur clic. Oferim cinci scheme de optimizare diferite. Fiecare mod de optimizare poate fi ajustat în funcție de nevoile utilizatorului, oferind utilizatorilor soluții de optimizare personalizate.",
+    "air_care_helps_3": "Vedere 3.3D a camerei",
+    "air_care_helps_3_content": "Urmăriți starea camerei și a aparatelor dvs. printr-o vizualizare 3D detaliată a casei dvs.",
+    "smart_laundry_key": "Spălătorie inteligentă",
+    "smart_laundry_helps": "Smart Laundry oferă sfaturi experte de spălare, un asistent intuitiv de spălare și o gestionare perfectă a detergentului, asigurând o experiență de spălare de neegalat",
+    "smart_laundry_helps_1": "1.Spălătorie personalizată",
+    "smart_laundry_helps_1_content": "Cicluri personalizate pe baza profilurilor și preferințelor utilizatorului, cu etichete pentru diferite anotimpuri, activități în aer liber, îngrijire a bebelușului și multe altele.",
+    "smart_laundry_helps_2": "2. Managementul detergentului",
+    "smart_laundry_helps_2_content": "Optimizați-vă rutina de spălat rufe cu Smart Home Laundry Assistant, recunoașteți automat mărcile de detergent și gestionați dozajul în mașina dvs. de spălat.",
+    "smart_laundry_helps_3": "3.Raport de utilizare a spălătoriei",
+    "smart_laundry_helps_3_content": "Afișează rapoarte săptămânale, lunare și anuale privind utilizarea de către utilizator a programului de spălătorie, precum și consumul lunar de apă și electricitate și curățarea tamburului.",
+    "smart_kitchen_key": "Bucătărie inteligentă",
+    "smart_kitchen_helps": "Smart Kitchen vă oferă o experiență inteligentă de gătit fără precedent, inclusiv rețete inteligente, asocieri de vinuri, asistenți de rețetă și management al ingredientelor, vinului și băuturilor",
+    "smart_kitchen_helps_1": "1.Reteta bucatarului",
+    "smart_kitchen_helps_1_content": "Experimentați rețetele maestrului în arome unice atunci când sunt gătite în diferite cuptoare, care urmează instrucțiunile de gătit ale rețetei cu un singur clic.",
+    "smart_kitchen_helps_2": "2.Asistent de rețete",
+    "smart_kitchen_helps_2_content": "Personalizați și generați rețete pe baza preferințelor dvs. personale, inclusiv nutriție, bucătării, stil de viață și alergii.",
+    "smart_kitchen_helps_3": "3.Managementul alimentar",
+    "smart_kitchen_helps_3_content": "Adăugați și vizualizați detalii despre ingredientele utilizate frecvent, cum ar fi data de expirare. Potriviți rapid rețetele alimentare potrivite și trimiteți ingredientele lipsă pe lista de cumpărături.",
+    "smart_kitchen_helps_4": "Managementul băuturilor",
+    "smart_kitchen_helps_4_content": "Adăugați băuturi și creați o listă de băuturi, vizualizați informații detaliate despre fiecare băutură stocată.",
+    "smart_kitchen_helps_5": "Inventarul vinurilor",
+    "smart_kitchen_helps_5_content": "Scanați pentru a crea o listă de crame de la VIvino, setați mementouri pentru perioada optimă de băut și recomandați combinarea alimentelor în funcție de tipul de vin.",
+    "smart_kitchen_helps_6": "6.Lista de cumpărături",
+    "smart_kitchen_helps_6_content": "Generați lista de cumpărături pe baza rețetei, marcați articolele pe care le dețineți deja și le-ați achiziționat ca referință pentru cumpărături.",
+    "smart_support_key": "Suport inteligent",
+    "smart_support_helps": "Smart Support oferă asistență completă pentru dispozitivele dvs. Puteți obține sfaturi de curățare și îngrijire pentru întreținerea zilnică, autodiagnosticare cu un singur clic pentru a verifica starea tuturor dispozitivelor și pentru a oferi soluții posibile pentru orice operațiuni anormale",
+    "smart_support_helps_1": "1.Sfaturi pentru curățare și întreținere",
+    "smart_support_helps_1_content": "Oferiți sugestii pentru curățarea și întreținerea zilnică a produsului.",
+    "smart_support_helps_2": "2. Autodiagnosticare cu un singur clic",
+    "smart_support_helps_2_content": "Auto-inspecție cu un singur clic pentru a înțelege starea tuturor aparatelor de uz casnic. Când este detectată o problemă, oferiți soluții recomandate.",
+    "smart_support_helps_3": "Depanare",
+    "smart_support_helps_3_content": "Când dispozitivul are o problemă, utilizatorii se pot auto-ajuta, pot depana și rezolva problema conform ghidului de eroare.",
+    "smart_support_helps_4": "4. Raportați problema",
+    "smart_support_helps_4_content": "Dacă există probleme cu utilizarea aplicației sau a produsului, utilizatorii pot feedback online pentru a reduce timpul de comunicare cu centrul de apeluri.",
+    "smart_support_helps_5": "5.Contactați-ne",
+    "smart_support_helps_5_content": "Utilizatorii ne pot contacta prin telefon, e-mail și site-ul oficial.",
+    "block_key": "Bloc",
+    "guide_tips_device_1": "Aceasta este noua filă <b> de pagină de pornire. </b>",
+    "guide_tips_device_2": "Puteți face clic pe „ : ” pentru a edita comanda, afișa sau ascunde.",
+    "guide_tips_device_3": "Puteți apăsa lung cardul pentru a-l șterge sau edita.",
+    "guide_tips_device_4": "Puteți experimenta <b> cărți de scenarii personalizate. </b>",
+    "guide_tips_device_5": "Puteți găsi setarea filei de pornire la <b> personalizați aspectul </b> pe pagina de meniu",
+    "guide_tips_1": "ConnectLife a lansat <b> cinci scenarii. </b>",
+    "guide_tips_2": "Puteți face clic pe „:” pentru a edita ordinea secțiunilor",
+    "guide_tips_3": "Puteți trage „=\" pentru a schimba ordinea secțiunilor de pe pagina de pornire.",
+    "c_your_device": "Conectați\ndispozitivele dvs",
+    "a_ex_new_way": "și experimentează un nou mod de viață inteligent.",
+    "my_place": "Locul meu"
 }
