--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4438,5 +4438,84 @@
     "CL_DV_OV_night_mode_setting_desc": "Зменшіть яскравість екрана та/або освітлення протягом запланованих нічних годин.",
     "CL_DV_OV_door_lock_setting_desc": "Увімкнення блокування дверцят заблокує дверцята духовки.",
     "CL_CF_FM_one_day_left": "залишився 1 день",
-    "CL_CF_FM_x_item_selected": "*** обраний елемент"
+    "CL_CF_FM_x_item_selected": "*** обраний елемент",
+    "CL_SL_CM_progam_send_warning": "На жаль, програма не може надіслати, увімкніть пристрій, відкрийте пульт і повторіть спробу.",
+    "CL_SL_CM_progam_start_warning": "На жаль, програму не можна запустити. Увімкніть пристрій, відкрийте пульт і повторіть спробу.",
+    "CL_SL_CM_progam_sent_successfully": "Програма успішно відправлена!",
+    "CL_SL_CM_select_device_desc": "Будь ласка, виберіть пристрій для використання.",
+    "CL_DV_WM_Detergent_In_Use_key": "Миючий засіб у використанні",
+    "CL_DV_RF_cleaning_mode": "Режим очищення",
+    "CL_DV_RF_holiday_mode": "Режим відпустки",
+    "CL_DV_RF_party_mode": "Режим вечірки",
+    "w_i_connect_scenario": "Що таке сценарій ConnectLife",
+    "w_i_smart_energy": "Що таке Smart Energy",
+    "smart_energy_l_m": "Дізнайтеся більше про ключові функції Smart Energy",
+    "w_i_air_care": "Що таке Air Care",
+    "air_care_l_m": "Дізнайтеся більше про основні функції Air Care",
+    "w_i_smart_laundry": "Що таке Smart Laundry",
+    "smart_laundry_l_m": "Дізнайтеся більше про основні функції Smart Laundry",
+    "w_i_smart_kitchen": "Що таке Smart Kitchen",
+    "smart_kitchen_l_m": "Дізнайтеся більше про ключові функції Smart Kitchen",
+    "w_i_smart_support": "Що таке Smart Support",
+    "smart_support_l_m": "Дізнайтеся більше про ключові функції Smart Support",
+    "smart_energy_helps": "Smart Energy допомагає контролювати та підтримувати пристрої в енергоефективному стані",
+    "smart_energy_helps_1": "1.One-Click Eco",
+    "smart_energy_helps_1_content": "Активний ECO режим вашої техніки. Статистичний аналіз енергоспоживання пристрою. Відстежуйте дані про енергозбереження та встановлюйте цільове використання енергії.",
+    "smart_energy_helps_2": "2. Моніторинг енергоспоживання",
+    "smart_energy_helps_2_content": "Розрахуйте загальне споживання електроенергії та води в будинку на щоденній, місячній та річній основі. ви також можете переглянути статистику споживання окремих пристроїв, частку споживання енергії кожним пристроєм протягом вибраного періоду, загальне та індивідуальне споживання енергії.",
+    "smart_energy_helps_3": "3. Помічник з питань енергетики",
+    "smart_energy_helps_3_content": "Встановлюйте цілі енергозбереження та надсилайте сповіщення користувачам, коли встановлені цільові значення досягнуті.",
+    "air_care_helps": "Догляд за повітрям спрямований на інтелектуальне керування температурою, вологістю та повітрям у всьому будинку",
+    "air_care_helps_1": "1. Оцінка повітря",
+    "air_care_helps_1_content": "Відстежуйте стан температури та вологості в кожній кімнаті в режимі реального часу та надавайте оцінки комфорту та нагадування на основі стану повітря",
+    "air_care_helps_2": "2. Оптимізація в один клік",
+    "air_care_helps_2_content": "Оптимізацію можна запустити в один клік. Ми пропонуємо п'ять різних схем оптимізації. Кожен режим оптимізації можна налаштувати відповідно до потреб користувача, надаючи користувачам індивідуальні рішення для оптимізації.",
+    "air_care_helps_3": "Вид кімнати 3.3D",
+    "air_care_helps_3_content": "Слідкуйте за станом кімнати та технікою за допомогою детальної 3D-візуалізації вашого будинку.",
+    "smart_laundry_key": "Розумна пральня",
+    "smart_laundry_helps": "Smart Laundry пропонує експертні поради щодо прання, інтуїтивно зрозумілий помічник у пранні та безперебійне керування пральними засобами, забезпечуючи неперевершені враження від прання.",
+    "smart_laundry_helps_1": "1. Індивідуальна пральня",
+    "smart_laundry_helps_1_content": "Персоналізовані цикли на основі профілів користувачів і вподобань із тегами для різних пір року, активного відпочинку, догляду за дитиною тощо.",
+    "smart_laundry_helps_2": "2. Керування миючими засобами",
+    "smart_laundry_helps_2_content": "Оптимізуйте свою процедуру прання за допомогою Smart Home Laundry Assistant, автоматично розпізнавайте бренди миючих засобів і керуйте дозуванням у вашій пральній машині.",
+    "smart_laundry_helps_3": "3. Звіт про використання пральні",
+    "smart_laundry_helps_3_content": "Відображає щотижневі, місячні та річні звіти про використання користувачем програми прання, а також місячне використання води та електроенергії та очищення барабана.",
+    "smart_kitchen_key": "Розумна кухня",
+    "smart_kitchen_helps": "Smart Kitchen надає вам безпрецедентний інтелектуальний досвід приготування їжі, включаючи інтелектуальні рецепти, поєднання вин, помічники рецептів, а також керування інгредієнтами, вином і напоями",
+    "smart_kitchen_helps_1": "1.Рецепт шеф-кухаря",
+    "smart_kitchen_helps_1_content": "Спробуйте майстерні рецепти з неповторними смаками, приготовані в різних печах, які дотримуються інструкцій рецепту одним клацанням миші.",
+    "smart_kitchen_helps_2": "2. Помічник рецептів",
+    "smart_kitchen_helps_2_content": "Налаштовуйте та створюйте рецепти на основі ваших особистих уподобань, включаючи харчування, кухню, спосіб життя та алергію.",
+    "smart_kitchen_helps_3": "3. Управління харчуванням",
+    "smart_kitchen_helps_3_content": "Додавайте та переглядайте відомості про інгредієнти, які часто використовуються, наприклад термін придатності. Швидко зіставте відповідні рецепти їжі та надішліть відсутні інгредієнти до списку покупок.",
+    "smart_kitchen_helps_4": "Керування напоями",
+    "smart_kitchen_helps_4_content": "Додавайте напої та створюйте список напоїв, переглядайте детальну інформацію про кожен окремий збережений напій.",
+    "smart_kitchen_helps_5": "Колекція вин",
+    "smart_kitchen_helps_5_content": "Скануйте, щоб створити список винних льохів від VIvino, установити нагадування про оптимальний період пиття та порекомендувати поєднання страв залежно від типу вина.",
+    "smart_kitchen_helps_6": "6. Список покупок",
+    "smart_kitchen_helps_6_content": "Створіть список покупок на основі рецепта, позначте предмети, які у вас уже є та придбані, як орієнтир для покупок.",
+    "smart_support_key": "Розумна підтримка",
+    "smart_support_helps": "Smart Support надає комплексну допомогу для ваших пристроїв. Ви можете отримати поради щодо чищення та догляду для щоденного обслуговування, самодіагностику одним клацанням миші, щоб перевірити стан усіх ваших пристроїв і надати можливі рішення для будь-яких ненормальних операцій",
+    "smart_support_helps_1": "1. Поради щодо чищення та обслуговування",
+    "smart_support_helps_1_content": "Дайте пропозиції щодо щоденного чищення та догляду за виробом.",
+    "smart_support_helps_2": "2. Самодіагностика в один клік",
+    "smart_support_helps_2_content": "Самоперевірка в один клік, щоб зрозуміти стан усіх побутових приладів. У разі виявлення проблеми надайте рекомендовані рішення.",
+    "smart_support_helps_3": "Вирішення проблем",
+    "smart_support_helps_3_content": "Коли з пристроєм виникають проблеми, користувачі можуть самостійно допомогти, усунути несправності та вирішити проблему відповідно до посібника з усунення несправностей.",
+    "smart_support_helps_4": "4. Повідомити про проблему",
+    "smart_support_helps_4_content": "Якщо виникають проблеми з APP або використанням продукту, користувачі можуть надіслати відгук онлайн, щоб скоротити час спілкування з кол-центром.",
+    "smart_support_helps_5": "5. Зв'яжіться з нами",
+    "smart_support_helps_5_content": "Користувачі можуть зв’язатися з нами по телефону, електронною поштою та офіційним веб-сайтом.",
+    "block_key": "Блокувати",
+    "guide_tips_device_1": "Це <b> нова вкладка домашньої сторінки. </b>",
+    "guide_tips_device_2": "Ви можете натиснути « : », щоб змінити порядок, показати або приховати.",
+    "guide_tips_device_3": "Ви можете довго натискати картку, щоб видалити або відредагувати її.",
+    "guide_tips_device_4": "Ви можете випробувати <b> індивідуальні картки сценаріїв. </b>",
+    "guide_tips_device_5": "Налаштування домашньої вкладки можна знайти в розділі <b> налаштувати вигляд </b> на сторінці меню",
+    "guide_tips_1": "ConnectLife запустив <b> п'ять сценаріїв. </b>",
+    "guide_tips_2": "Ви можете натиснути «:», щоб змінити порядок розділів",
+    "guide_tips_3": "Ви можете перетягнути «=», щоб змінити порядок розділів на домашній сторінці.",
+    "c_your_device": "Підключіть\nваші пристрої",
+    "a_ex_new_way": "і відчуйте новий спосіб розумного життя.",
+    "my_place": "Моє місце"
 }
