--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4438,5 +4438,84 @@
     "CL_DV_OV_night_mode_setting_desc": "Reduzieren Sie die Helligkeit des Bildschirms und/oder des Lichts während der geplanten Nachtstunden.",
     "CL_DV_OV_door_lock_setting_desc": "Durch Einschalten der Türverriegelung wird die Tür Ihres Ofens verriegelt.",
     "CL_CF_FM_one_day_left": "1 Tag übrig",
-    "CL_CF_FM_x_item_selected": "*** Artikel ausgewählt"
+    "CL_CF_FM_x_item_selected": "*** Artikel ausgewählt",
+    "CL_SL_CM_progam_send_warning": "Entschuldigung, das Programm kann nicht senden. Bitte schalten Sie Ihr Gerät ein, öffnen Sie die Fernbedienung und versuchen Sie es erneut.",
+    "CL_SL_CM_progam_start_warning": "Entschuldigung, das Programm kann nicht gestartet werden. Bitte schalten Sie Ihr Gerät ein, öffnen Sie die Fernbedienung und versuchen Sie es erneut.",
+    "CL_SL_CM_progam_sent_successfully": "Programm erfolgreich gesendet!",
+    "CL_SL_CM_select_device_desc": "Bitte wählen Sie das zu verwendende Gerät aus.",
+    "CL_DV_WM_Detergent_In_Use_key": "Verwendetes Reinigungsmittel",
+    "CL_DV_RF_cleaning_mode": "Reinigungsmodus",
+    "CL_DV_RF_holiday_mode": "Urlaubsmodus",
+    "CL_DV_RF_party_mode": "Party-Modus",
+    "w_i_connect_scenario": "Was ist das ConnectLife-Szenario",
+    "w_i_smart_energy": "Was ist Smart Energy",
+    "smart_energy_l_m": "Erfahren Sie mehr über die wichtigsten Funktionen von Smart Energy",
+    "w_i_air_care": "Was ist Air Care",
+    "air_care_l_m": "Erfahren Sie mehr über die wichtigsten Funktionen von Air Care",
+    "w_i_smart_laundry": "Was ist Smart Laundry",
+    "smart_laundry_l_m": "Erfahren Sie mehr über die wichtigsten Funktionen von Smart Laundry",
+    "w_i_smart_kitchen": "Was ist Smart Kitchen",
+    "smart_kitchen_l_m": "Erfahren Sie mehr über die wichtigsten Funktionen von Smart Kitchen",
+    "w_i_smart_support": "Was ist Smart Support",
+    "smart_support_l_m": "Erfahren Sie mehr über die wichtigsten Funktionen von Smart Support",
+    "smart_energy_helps": "Smart Energy hilft Ihnen, Geräte zu überwachen und in einem energieeffizienten Zustand zu halten",
+    "smart_energy_helps_1": "1.Ein-Klick-Öko",
+    "smart_energy_helps_1_content": "Aktivieren Sie den Öko-Modus Ihrer Geräte. Analysieren Sie den Energieverbrauch der Geräte statistisch. Überwachen Sie Energiespardaten und legen Sie Energienutzungsziele fest.",
+    "smart_energy_helps_2": "2. Überwachung des Energieverbrauchs",
+    "smart_energy_helps_2_content": "Berechnen Sie den Strom- und Wasserverbrauch des gesamten Hauses auf Tages-, Monats- und Jahresbasis. Sie können auch die Verbrauchsstatistiken einzelner Geräte, den Anteil des Energieverbrauchs jedes Geräts innerhalb des ausgewählten Zeitraums sowie den Gesamt- und Einzelenergieverbrauch anzeigen.",
+    "smart_energy_helps_3": "3.Energieassistent",
+    "smart_energy_helps_3_content": "Legen Sie Energiesparziele fest und senden Sie den Benutzern Benachrichtigungen, wenn die festgelegten Zielwerte erreicht werden.",
+    "air_care_helps": "Air Care zielt auf die intelligente Steuerung von Temperatur, Luftfeuchtigkeit und Luft im gesamten Haus ab",
+    "air_care_helps_1": "1.Luftbewertung",
+    "air_care_helps_1_content": "Überwachen Sie den Temperatur- und Feuchtigkeitsstatus jedes Raums in Echtzeit und geben Sie Komfortbewertungen und Erinnerungen basierend auf der Klimaanlage aus",
+    "air_care_helps_2": "2. Optimierung mit einem Klick",
+    "air_care_helps_2_content": "Die Optimierung kann mit einem Klick gestartet werden. Wir bieten fünf verschiedene Optimierungsschemata an. Jeder Optimierungsmodus kann entsprechend den Benutzeranforderungen angepasst werden, sodass Benutzer maßgeschneiderte Optimierungslösungen erhalten.",
+    "air_care_helps_3": "3.3D Raumansicht",
+    "air_care_helps_3_content": "Behalten Sie den Status Ihrer Zimmer und Geräte durch eine detaillierte 3D-Visualisierung Ihres Zuhauses im Auge.",
+    "smart_laundry_key": "Intelligente Wäscherei",
+    "smart_laundry_helps": "Smart Laundry bietet Expertentipps zum Waschen, einen intuitiven Wäscheassistenten und eine nahtlose Waschmittelverwaltung und sorgt so für ein unvergleichliches Wascherlebnis",
+    "smart_laundry_helps_1": "1.Kundenspezifische Wäsche",
+    "smart_laundry_helps_1_content": "Personalisierte Zyklen basierend auf Benutzerprofilen und Vorlieben, mit Tags für verschiedene Jahreszeiten, Outdoor-Aktivitäten, Babypflege und mehr.",
+    "smart_laundry_helps_2": "2.Waschmittelmanagement",
+    "smart_laundry_helps_2_content": "Optimieren Sie Ihren Wäschealltag mit dem Smart Home Laundry Assistant, erkennen Sie Waschmittelmarken automatisch und verwalten Sie die Dosierung Ihrer Waschmaschine.",
+    "smart_laundry_helps_3": "3. Wäschenutzungsbericht",
+    "smart_laundry_helps_3_content": "Zeigt wöchentliche, monatliche und jährliche Berichte über die Nutzung des Wäscheprogramms durch den Benutzer sowie über den monatlichen Wasser- und Stromverbrauch und die Trommelreinigung an.",
+    "smart_kitchen_key": "Intelligente Küche",
+    "smart_kitchen_helps": "Smart Kitchen bietet Ihnen ein beispielloses intelligentes Kocherlebnis, einschließlich intelligenter Rezepte, Weinpaarungen, Rezeptassistenten sowie Zutaten-, Wein- und Getränkemanagement",
+    "smart_kitchen_helps_1": "1.Rezept vom Chefkoch",
+    "smart_kitchen_helps_1_content": "Erleben Sie Meisterrezepte in einzigartigen Aromen beim Garen in verschiedenen Öfen, die den Garanweisungen des Rezepts mit nur einem Klick folgen.",
+    "smart_kitchen_helps_2": "2.Rezept-Assistent",
+    "smart_kitchen_helps_2_content": "Passen Sie Rezepte an und erstellen Sie sie auf der Grundlage Ihrer persönlichen Vorlieben, einschließlich Ernährung, Küche, Lebensstil und Allergien.",
+    "smart_kitchen_helps_3": "3.Lebensmittelmanagement",
+    "smart_kitchen_helps_3_content": "Fügen Sie Details zu häufig verwendeten Zutaten hinzu und zeigen Sie diese an, z. B. das Verfallsdatum. Finden Sie schnell passende Rezepte und senden Sie fehlende Zutaten an die Einkaufsliste.",
+    "smart_kitchen_helps_4": "Getränke-Management",
+    "smart_kitchen_helps_4_content": "Fügen Sie Getränke hinzu und erstellen Sie eine Getränkeliste. Zeigen Sie detaillierte Informationen zu jedem einzelnen gespeicherten Getränk an.",
+    "smart_kitchen_helps_5": "Wein vorrat",
+    "smart_kitchen_helps_5_content": "Scannen Sie, um eine Weinkellerliste von VIvino zu erstellen, Erinnerungen für den optimalen Trinkzeitraum festzulegen und auf der Grundlage der Weinsorte passende Speisenempfehlungen zu erhalten.",
+    "smart_kitchen_helps_6": "6. Einkaufsliste",
+    "smart_kitchen_helps_6_content": "Erstellen Sie die Einkaufsliste anhand des Rezeptes und markieren Sie die Artikel, die Sie bereits besitzen und als Einkaufsreferenz erworben haben.",
+    "smart_support_key": "Intelligente Unterstützung",
+    "smart_support_helps": "Smart Support bietet umfassende Unterstützung für Ihre Geräte. Sie erhalten Reinigungs- und Pflegetipps für die tägliche Wartung, eine Ein-Klick-Selbstdiagnose, um den Status aller Ihrer Geräte zu überprüfen und mögliche Lösungen für abnormale Vorgänge bereitzustellen.",
+    "smart_support_helps_1": "1. Reinigungs- und Wartungstipps",
+    "smart_support_helps_1_content": "Geben Sie Vorschläge zur täglichen Reinigung und Pflege des Produkts.",
+    "smart_support_helps_2": "2.Selbstdiagnose mit einem Klick",
+    "smart_support_helps_2_content": "Mit der Selbstinspektion mit nur einem Klick können Sie den Status aller Haushaltsgeräte erfassen. Wenn ein Problem erkannt wird, werden empfohlene Lösungen bereitgestellt.",
+    "smart_support_helps_3": "Fehlerbehebung",
+    "smart_support_helps_3_content": "Wenn mit dem Gerät ein Problem auftritt, können sich Benutzer selbst helfen, die Fehlersuche durchführen und das Problem gemäß der Fehleranleitung lösen.",
+    "smart_support_helps_4": "4.Problem melden",
+    "smart_support_helps_4_content": "Bei Problemen mit der App oder der Produktnutzung können Benutzer online Feedback geben, um die Kommunikationszeit mit dem Callcenter zu verkürzen.",
+    "smart_support_helps_5": "5.Kontaktieren Sie uns",
+    "smart_support_helps_5_content": "Benutzer können uns per Telefon, E-Mail und über die offizielle Website kontaktieren.",
+    "block_key": "Block",
+    "guide_tips_device_1": "Dies ist die <b> neue Registerkarte der Startseite. </b>",
+    "guide_tips_device_2": "Sie können auf „:“ klicken, um die Reihenfolge zu bearbeiten, anzuzeigen oder auszublenden.",
+    "guide_tips_device_3": "Sie können die Karte durch langes Drücken löschen oder bearbeiten.",
+    "guide_tips_device_4": "Sie können <b> individuelle Szenariokarten erleben. </b>",
+    "guide_tips_device_5": "Sie finden die Einstellungen für die Registerkarte „Start“ unter <b> Erscheinungsbild anpassen </b> auf der Menüseite.",
+    "guide_tips_1": "ConnectLife hat <b> fünf Szenarien eingeführt. </b>",
+    "guide_tips_2": "Sie können auf „:“ klicken, um die Reihenfolge der Abschnitte zu bearbeiten",
+    "guide_tips_3": "Sie können das „=“ ziehen, um die Reihenfolge der Abschnitte auf der Homepage zu ändern.",
+    "c_your_device": "Verbinden\nIhre Geräte",
+    "a_ex_new_way": "und erleben Sie eine neue Art des smarten Lebens.",
+    "my_place": "Mein Platz"
 }
