--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4438,5 +4438,84 @@
     "CL_DV_OV_night_mode_setting_desc": "Znížte jas displeja a/alebo svetlo počas plánovaných nočných hodín.",
     "CL_DV_OV_door_lock_setting_desc": "Zapnutím zámku dvierok uzamknete dvierka vašej rúry.",
     "CL_CF_FM_one_day_left": "Zostáva 1 deň",
-    "CL_CF_FM_x_item_selected": "*** vybratá položka"
+    "CL_CF_FM_x_item_selected": "*** vybratá položka",
+    "CL_SL_CM_progam_send_warning": "Ľutujeme, program nemôže odoslať, zapnite zariadenie, otvorte diaľkové ovládanie a skúste to znova.",
+    "CL_SL_CM_progam_start_warning": "Ľutujeme, program sa nedá spustiť. Zapnite zariadenie, otvorte diaľkové ovládanie a skúste to znova.",
+    "CL_SL_CM_progam_sent_successfully": "Program bol úspešne odoslaný!",
+    "CL_SL_CM_select_device_desc": "Vyberte zariadenie, ktoré chcete použiť.",
+    "CL_DV_WM_Detergent_In_Use_key": "Používaný čistiaci prostriedok",
+    "CL_DV_RF_cleaning_mode": "Režim čistenia",
+    "CL_DV_RF_holiday_mode": "Dovolenkový režim",
+    "CL_DV_RF_party_mode": "Párty režim",
+    "w_i_connect_scenario": "Čo je scenár ConnectLife",
+    "w_i_smart_energy": "Čo je inteligentná energia",
+    "smart_energy_l_m": "Získajte viac informácií o kľúčových funkciách Smart Energy",
+    "w_i_air_care": "Čo je Air Care",
+    "air_care_l_m": "Získajte viac informácií o kľúčových funkciách Air Care",
+    "w_i_smart_laundry": "Čo je Smart Laundry",
+    "smart_laundry_l_m": "Získajte viac informácií o kľúčových funkciách Smart Laundry",
+    "w_i_smart_kitchen": "Čo je inteligentná kuchyňa",
+    "smart_kitchen_l_m": "Zistite viac o kľúčových funkciách inteligentnej kuchyne",
+    "w_i_smart_support": "Čo je inteligentná podpora",
+    "smart_support_l_m": "Získajte viac informácií o kľúčových funkciách inteligentnej podpory",
+    "smart_energy_helps": "Smart Energy vám pomáha monitorovať a udržiavať zariadenia v energeticky úspornom stave",
+    "smart_energy_helps_1": "1.Eko jedným kliknutím",
+    "smart_energy_helps_1_content": "Aktívny ECO režim vašich spotrebičov. Štatisticky analyzujte spotrebu energie zariadenia. Sledujte údaje o úspore energie a nastavte cieľ spotreby energie.",
+    "smart_energy_helps_2": "2. Monitorovanie spotreby energie",
+    "smart_energy_helps_2_content": "Vypočítajte spotrebu energie a vody v celom dome na dennej, mesačnej a ročnej báze. môžete si prezerať aj štatistiku spotreby jednotlivých zariadení, podiel spotreby energie každého zariadenia za zvolené obdobie, celkovú a individuálnu spotrebu energie.",
+    "smart_energy_helps_3": "3.Energetický asistent",
+    "smart_energy_helps_3_content": "Nastavte ciele v oblasti úspory energie a po dosiahnutí stanovených cieľových hodnôt odosielajte používateľom upozornenia.",
+    "air_care_helps": "Starostlivosť o vzduch má za cieľ vyriešiť inteligentné riadenie teploty, vlhkosti a vzduchu v celom dome",
+    "air_care_helps_1": "1.Hodnotenie ovzdušia",
+    "air_care_helps_1_content": "Monitorujte stav teploty a vlhkosti v každej miestnosti v reálnom čase a poskytujte hodnotenia komfortu a pripomienky na základe klimatizácie",
+    "air_care_helps_2": "2. Optimalizácia jedným kliknutím",
+    "air_care_helps_2_content": "Optimalizáciu je možné spustiť jedným kliknutím. Ponúkame päť rôznych optimalizačných schém. Každý režim optimalizácie je možné upraviť podľa potrieb používateľa a poskytnúť používateľom prispôsobené riešenia optimalizácie.",
+    "air_care_helps_3": "3.3D zobrazenie miestnosti",
+    "air_care_helps_3_content": "Sledujte stav svojej izby a spotrebičov prostredníctvom podrobnej 3D vizualizácie vášho domova.",
+    "smart_laundry_key": "Inteligentná práčovňa",
+    "smart_laundry_helps": "Smart Laundry ponúka odborné tipy na pranie, intuitívneho asistenta prania a bezproblémovú správu pracieho prostriedku, čo zaisťuje jedinečný zážitok z prania",
+    "smart_laundry_helps_1": "1. Práčovňa na mieru",
+    "smart_laundry_helps_1_content": "Prispôsobené cykly založené na užívateľských profiloch a preferenciách so štítkami pre rôzne ročné obdobia, outdoorové aktivity, starostlivosť o bábätko a ďalšie.",
+    "smart_laundry_helps_2": "2. Manažment detergentov",
+    "smart_laundry_helps_2_content": "Optimalizujte svoje pranie pomocou Smart Home Laundry Assistant, automaticky rozpoznávajte značky pracieho prostriedku a spravujte dávkovanie vo vašej práčke.",
+    "smart_laundry_helps_3": "3. Správa o používaní bielizne",
+    "smart_laundry_helps_3_content": "Zobrazuje týždenné, mesačné a ročné správy o používaní programu prania používateľom, ako aj mesačnú spotrebu vody a elektriny a čistenie bubna.",
+    "smart_kitchen_key": "Inteligentná kuchyňa",
+    "smart_kitchen_helps": "Smart Kitchen vám poskytuje bezprecedentný inteligentný zážitok z varenia vrátane inteligentných receptov, párovania vína, asistentov receptov a správy ingrediencií, vína a nápojov.",
+    "smart_kitchen_helps_1": "1.Recept šéfkuchára",
+    "smart_kitchen_helps_1_content": "Vyskúšajte majstrovské recepty v jedinečných príchutiach pri varení v rôznych rúrach, ktoré sa riadia pokynmi na varenie jediným kliknutím.",
+    "smart_kitchen_helps_2": "2.Asistent receptov",
+    "smart_kitchen_helps_2_content": "Prispôsobte a generujte recepty na základe vašich osobných preferencií vrátane výživy, kuchyne, životného štýlu a alergií.",
+    "smart_kitchen_helps_3": "3. Food Management",
+    "smart_kitchen_helps_3_content": "Pridajte a zobrazte podrobnosti o často používaných prísadách, ako je dátum spotreby. Rýchlo priraďte vhodné recepty na jedlo a odošlite chýbajúce ingrediencie do nákupného zoznamu.",
+    "smart_kitchen_helps_4": "Nápojový manažment",
+    "smart_kitchen_helps_4_content": "Pridajte nápoje a vytvorte si nápojový lístok, zobrazte podrobné informácie o každom jednom uloženom nápoji.",
+    "smart_kitchen_helps_5": "Víno Inventár",
+    "smart_kitchen_helps_5_content": "Skenovaním vytvorte zoznam vínnych pivníc od spoločnosti VIvino, nastavte pripomienky na optimálny čas pitia a odporučte párovanie jedál na základe typu vína.",
+    "smart_kitchen_helps_6": "6.Nákupný zoznam",
+    "smart_kitchen_helps_6_content": "Vytvorte nákupný zoznam na základe receptu, označte položky, ktoré už vlastníte a ktoré ste získali, ako nákupnú referenciu.",
+    "smart_support_key": "Inteligentná podpora",
+    "smart_support_helps": "Smart Support poskytuje komplexnú pomoc pre vaše zariadenia. Môžete získať tipy na čistenie a starostlivosť o každodennú údržbu, autodiagnostiku jedným kliknutím na kontrolu stavu všetkých vašich zariadení a poskytnutie možných riešení pre akékoľvek abnormálne operácie.",
+    "smart_support_helps_1": "1. Tipy na čistenie a údržbu",
+    "smart_support_helps_1_content": "Poskytnite návrhy na každodenné čistenie a údržbu produktu.",
+    "smart_support_helps_2": "2. Samostatná Dignosis jedným kliknutím",
+    "smart_support_helps_2_content": "Samokontrola na jedno kliknutie na pochopenie stavu všetkých domácich spotrebičov. Keď sa zistí problém, poskytnite odporúčané riešenia.",
+    "smart_support_helps_3": "Riešenie problémov",
+    "smart_support_helps_3_content": "Keď má zariadenie problém, používatelia si môžu svojpomocne pomôcť, vyriešiť problém a vyriešiť problém podľa sprievodcu poruchami.",
+    "smart_support_helps_4": "4. Nahláste problém",
+    "smart_support_helps_4_content": "Ak sa vyskytnú problémy s používaním aplikácie alebo produktu, používatelia môžu spätnú väzbu online, aby skrátili čas komunikácie s call centrom.",
+    "smart_support_helps_5": "5. Kontaktujte nás",
+    "smart_support_helps_5_content": "Používatelia nás môžu kontaktovať prostredníctvom telefónu, e-mailu a oficiálnej webovej stránky.",
+    "block_key": "Blokovať",
+    "guide_tips_device_1": "Toto je <b> nová karta domovskej stránky. </b>",
+    "guide_tips_device_2": "Kliknutím na \" : \" môžete objednávku upraviť, zobraziť alebo skryť.",
+    "guide_tips_device_3": "Kartu môžete vymazať alebo upraviť dlhým stlačením.",
+    "guide_tips_device_4": "Môžete zažiť <b> prispôsobené karty scenára. </b>",
+    "guide_tips_device_5": "Nastavenie karty Domov nájdete v časti <b> prispôsobiť vzhľad </b> na stránke ponuky",
+    "guide_tips_1": "ConnectLife spustil <b> päť scenárov. </b>",
+    "guide_tips_2": "Môžete kliknúť na „:“ a upraviť poradie sekcií",
+    "guide_tips_3": "Potiahnutím \"=\" môžete zmeniť poradie sekcií na domovskej stránke.",
+    "c_your_device": "Pripojte\nvaše zariadenia",
+    "a_ex_new_way": "a zažite nový spôsob inteligentného života.",
+    "my_place": "Moje miesto"
 }
