--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4438,5 +4438,84 @@
     "CL_DV_OV_night_mode_setting_desc": "Minska skärmens ljusstyrka och/eller ljuset under schemalagda nattimmar.",
     "CL_DV_OV_door_lock_setting_desc": "Om du slår på dörrlåset låser du dörren till din ugn.",
     "CL_CF_FM_one_day_left": "1 dag kvar",
-    "CL_CF_FM_x_item_selected": "*** objekt valt"
+    "CL_CF_FM_x_item_selected": "*** objekt valt",
+    "CL_SL_CM_progam_send_warning": "Tyvärr kan programmet inte skicka, vänligen slå på din enhet och öppna fjärrkontrollen och försök igen.",
+    "CL_SL_CM_progam_start_warning": "Tyvärr, programmet kan inte starta, vänligen slå på din enhet och öppna fjärrkontrollen och försök igen.",
+    "CL_SL_CM_progam_sent_successfully": "Program har skickats!",
+    "CL_SL_CM_select_device_desc": "Välj den enhet som ska användas.",
+    "CL_DV_WM_Detergent_In_Use_key": "Tvättmedel i bruk",
+    "CL_DV_RF_cleaning_mode": "Rengöringsläge",
+    "CL_DV_RF_holiday_mode": "Semesterläge",
+    "CL_DV_RF_party_mode": "Festläge",
+    "w_i_connect_scenario": "Vad är ConnectLife-scenariot",
+    "w_i_smart_energy": "Vad är smart energi",
+    "smart_energy_l_m": "Lär dig mer om nyckelfunktionerna i Smart Energy",
+    "w_i_air_care": "Vad är Air Care",
+    "air_care_l_m": "Lär dig mer om huvudfunktionerna i Air Care",
+    "w_i_smart_laundry": "Vad är Smart Laundry",
+    "smart_laundry_l_m": "Lär dig mer om nyckelfunktionerna i Smart Laundry",
+    "w_i_smart_kitchen": "Vad är Smart Kitchen",
+    "smart_kitchen_l_m": "Lär dig mer om nyckelfunktionerna i Smart Kitchen",
+    "w_i_smart_support": "Vad är Smart Support",
+    "smart_support_l_m": "Läs mer om nyckelfunktionerna i Smart Support",
+    "smart_energy_helps": "Smart Energy hjälper dig att övervaka och hålla enheter i energieffektivt tillstånd",
+    "smart_energy_helps_1": "1.Eco med ett klick",
+    "smart_energy_helps_1_content": "Aktivt ECO-läge för dina apparater. Analysera enhetens energiförbrukning statistiskt. Övervaka energispardata och ställ in energianvändningsmål.",
+    "smart_energy_helps_2": "2. Övervakning av energiförbrukning",
+    "smart_energy_helps_2_content": "Beräkna hela husets energi- och vattenförbrukning på en daglig, månads- och årsbasis. Du kan också se förbrukningsstatistik för enskilda enheter, andelen energiförbrukning för varje enhet inom den valda perioden, den totala och individuella energiförbrukningen.",
+    "smart_energy_helps_3": "3.Energiassistent",
+    "smart_energy_helps_3_content": "Sätt energibesparande mål och skicka meddelanden till användarna när de uppsatta målvärdena uppnås.",
+    "air_care_helps": "Luftvård syftar till att lösa den intelligenta styrningen av temperatur, luftfuktighet och luft i hela huset",
+    "air_care_helps_1": "1. Luftutvärdering",
+    "air_care_helps_1_content": "Övervaka temperatur- och luftfuktighetsstatusen för varje rum i realtid och ge komfortutvärderingar och påminnelser baserat på luftkonditioneringen",
+    "air_care_helps_2": "2. Optimering med ett klick",
+    "air_care_helps_2_content": "Optimering kan startas med ett klick. Vi tillhandahåller fem olika optimeringsscheman. Varje optimeringsläge kan justeras efter användarnas behov, vilket ger användarna skräddarsydda optimeringslösningar.",
+    "air_care_helps_3": "Rumsvy i 3.3D",
+    "air_care_helps_3_content": "Håll ett öga på ditt rums status och utrustning genom en detaljerad 3D-visualisering av ditt hem.",
+    "smart_laundry_key": "Smart tvätt",
+    "smart_laundry_helps": "Smart Laundry erbjuder experttips för tvätt, en intuitiv tvättassistent och sömlös tvättmedelshantering, vilket säkerställer en oöverträffad tvättupplevelse",
+    "smart_laundry_helps_1": "1. Anpassad tvätt",
+    "smart_laundry_helps_1_content": "Personliga cykler baserade på användarprofiler och preferenser, med taggar för olika årstider, utomhusaktiviteter, babyvård med mera.",
+    "smart_laundry_helps_2": "2.Tvättmedelshantering",
+    "smart_laundry_helps_2_content": "Optimera din tvättrutin med Smart Home Laundry Assistant, identifiera automatiskt tvättmedelsmärken och hantera doseringen i din tvättmaskin.",
+    "smart_laundry_helps_3": "3.Tvättanvändningsrapport",
+    "smart_laundry_helps_3_content": "Visar vecko-, månads- och årsrapporter om användarens användning av tvättprogrammet, samt månadens vatten- och elanvändning och trumrengöring.",
+    "smart_kitchen_key": "Smart kök",
+    "smart_kitchen_helps": "Smart Kitchen ger dig en oöverträffad intelligent matlagningsupplevelse, inklusive intelligenta recept, vinkombinationer, receptassistenter och hantering av ingredienser, vin och drycker",
+    "smart_kitchen_helps_1": "1. Kock recept",
+    "smart_kitchen_helps_1_content": "Upplev mästarecept i unika smaker när de tillagas i olika ugnar, som följer receptets tillagningsanvisningar med bara ett klick.",
+    "smart_kitchen_helps_2": "2.Receptassistent",
+    "smart_kitchen_helps_2_content": "Anpassa och generera recept baserat på dina personliga preferenser inklusive näring, kök, livsstil och allergier.",
+    "smart_kitchen_helps_3": "3. Livsmedelshantering",
+    "smart_kitchen_helps_3_content": "Lägg till och visa detaljer om ofta använda ingredienser som utgångsdatum. Matcha snabbt lämpliga matrecept och skickade saknade ingredienser till inköpslistan.",
+    "smart_kitchen_helps_4": "Övervaka",
+    "smart_kitchen_helps_4_content": "Lägg till drycker och skapa en dryckeslista, se detaljerad information om varje lagrad dryck.",
+    "smart_kitchen_helps_5": "Vin förteckning",
+    "smart_kitchen_helps_5_content": "Skanna för att skapa vinkällarlista av VIvino, ställ in påminnelser för optimal dricksperiod och rekommendera matparning baserat på vintyp.",
+    "smart_kitchen_helps_6": "6. Inköpslista",
+    "smart_kitchen_helps_6_content": "Skapa inköpslistan utifrån receptet, markera de varor du redan äger och köpt som din shoppingreferens.",
+    "smart_support_key": "Smart support",
+    "smart_support_helps": "Smart Support ger omfattande hjälp för dina enheter. Du kan få rengörings- och skötseltips för dagligt underhåll, självdiagnostik med ett klick för att kontrollera statusen för alla dina enheter och tillhandahålla möjliga lösningar för eventuella onormala operationer",
+    "smart_support_helps_1": "1.Rengörings- och underhållstips",
+    "smart_support_helps_1_content": "Ge förslag på daglig rengöring och underhåll av produkten.",
+    "smart_support_helps_2": "2.Själv Dignosis med ett klick",
+    "smart_support_helps_2_content": "Självinspektion med ett klick för att förstå statusen för alla hushållsapparater. När ett problem upptäcks, ge rekommenderade lösningar.",
+    "smart_support_helps_3": "Felsökning",
+    "smart_support_helps_3_content": "När enheten har ett problem kan användare självhjälpa, felsöka och lösa problemet enligt felguiden.",
+    "smart_support_helps_4": "4.Rapportera problem",
+    "smart_support_helps_4_content": "Om det finns problem med APP eller produktanvändning kan användare återkoppla online för att minska kommunikationstiden med callcentret.",
+    "smart_support_helps_5": "5.Kontakta oss",
+    "smart_support_helps_5_content": "Användare kan kontakta oss via telefon, e-post och officiella webbplats.",
+    "block_key": "Blockera",
+    "guide_tips_device_1": "Det här är den <b> nya fliken på startsidan. </b>",
+    "guide_tips_device_2": "Du kan klicka på \" : \" för att redigera beställningen, visa eller dölja.",
+    "guide_tips_device_3": "Du kan trycka länge på kortet för att radera eller redigera det.",
+    "guide_tips_device_4": "Du kan uppleva <b> anpassade scenariokort. </b>",
+    "guide_tips_device_5": "Du hittar inställningen för startfliken under <b> anpassa utseende </b> på menysidan",
+    "guide_tips_1": "ConnectLife har lanserat <b> fem scenarier. </b>",
+    "guide_tips_2": "Du kan klicka på \":\" för att redigera ordningen på avsnitten",
+    "guide_tips_3": "Du kan dra \"=\" för att ändra ordningen på avsnitten på hemsidan.",
+    "c_your_device": "Anslut\ndina enheter",
+    "a_ex_new_way": "och upplev ett nytt sätt att leva smart.",
+    "my_place": "Min plats"
 }
